# simple-conv-network

./: .gitignore  Cargo.toml  README.md
examples/: benchmark_blas.rs  mini_batches.rs
src/: avg_pool_layer.rs  base_layer.rs  base_net.rs  cnn_net.rs  col2im.rs  conv_layer.rs  conv_pool_layer.rs  fully_connected_layer.rs  im2col.rs  lenet5.rs  lib.rs  load_mnist.rs  main.rs  max_pool_layer.rs  network.rs  relu.rs  sigmoid_layer.rs  softmax_layer.rs  types.rs  utils.rs
src/cifar10/: load_cifar10.rs
src/mnist/: augment.rs  load_mnist.rs
