[package]
name = "mnist-conv-rust"
version = "0.1.0"
edition = "2024"
authors = ["Dzung Nguyen Mau"]

[dependencies]
rand = "0.10.1"
zip = "8.6.0"
byteorder = "1.5"
ndarray = { version = "0.17.2", features = ["blas"] }
blas-src = { version = "0.14.0", features = ["accelerate"] }
# For Linux/Windows you can use Intel MKL instead:
# blas-src = { version = "0.14.0", features = ["intel-mkl"] }

[dev-dependencies]
ctor = "1.0.6"
