[package]
name = "mnist-conv-rust"
description = "A simple convolutional neural network implementation in Rust for the MNIST dataset."
version = "0.1.0"
edition = "2024"
authors = ["Dzung Nguyen Mau"]

[dependencies]
rayon = "1.12.0"
rand = "0.10.1"
zip = "8.6.0"
byteorder = "1.5"
ndarray = { version = "0.17.2", features = ["blas"] }
blas-src = { version = "0.14.0", features = ["accelerate"] }
# For Linux/Windows you can use Intel MKL instead:
# blas-src = { version = "0.14.0", features = ["intel-mkl"] }

[dev-dependencies]
ctor = "1.0.6"
cargo-husky = { version = "1", features = ["precommit-hook"] }
