[package]
name = "simple-conv-network"
description = "A simple convolutional neural network implementation in Rust for the MNIST dataset."
version = "0.1.0"
edition = "2024"
authors = ["Dzung Nguyen Mau"]

[dependencies]
rayon = "1.12.0"
rand = "0.10.1"
zip = "8.6.0"
byteorder = "1.5"
ndarray = "0.17.2"
image = { version = "0.25.10", features = ["png"] }

[target.'cfg(target_os = "macos")'.dependencies]
blas-src = { version = "0.14.0", features = ["accelerate"] }

# On Windows, we skip BLAS to avoid dependency issues
# Performance is still good with ndarray's optimized pure Rust implementation

[dev-dependencies]
ctor = "1.0.6"
cargo-husky = { version = "1", features = ["precommit-hook"] }
